--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       run: npm install
 
     - name: Run Migrations
-      run: npm run migrate
+      run: npm run migrate up
       env:
         PGHOST: localhost
         PGUSER: user_test
