--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,5 +62,5 @@ jobs:
         PGPASSWORD: password_test
         PGDATABASE: forumapi_test
         PGPORT: 5432
-        ACCESS_TOKEN_KEY: rahasia
-        REFRESH_TOKEN_KEY: rahasia
+        ACCESS_TOKEN_KEY: rahasia-untuk-access
+        REFRESH_TOKEN_KEY: rahasia-untuk-refresh
