--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,3 +64,4 @@ jobs:
         PGPORT: 5432
         ACCESS_TOKEN_KEY: rahasia-untuk-access
         REFRESH_TOKEN_KEY: rahasia-untuk-refresh
+        ACCESS_TOKEN_AGE: 3000
